# klangfarb

./: .gitignore  Makefile  README.md  design.org
docs/: design.org
klangfarb/: Duration.gd  Main.gdns  Main.tscn  MonoSynth.gdns  Osc.gdns  Power.gd  SineWave.gdns  klangfarbrs.gdnlib  libklangfarbrs.gdnlib  main.gd  project.godot
klangfarb/.import/: moog.JPG-f233f2842c5d6fb78dc4e01163dddabf.md5  moog.JPG-f233f2842c5d6fb78dc4e01163dddabf.stex  synth.jpeg-0d3692b736009049abb06e73100121d7.stex  synth.jpeg-e88e182ce09e6038fdb429a43ce25107.md5
klangfarb/assets/: moog.JPG.import  synth.jpeg.import
klangfarbrs/: Cargo.toml
klangfarbrs/src/: adsr.rs  envelope.rs  ignore  instrument.rs  lib.rs  line.rs  main.rs  osc.rs  partial.rs  phasor.rs  utils.rs
