[package]
name = "klangfarbrs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
name = "klangfarbrs"

[dependencies]
gdnative = "0.9"
anyhow = "1.0.44"
dasp = "0.11.0"
dasp_signal = "0.11.0"
dasp_envelope = "0.11.0"
cpal = "0.13.4"
